--- a/src/app/view/achat/achat/demande-prix-final/demande-prix-final.component.html
+++ b/src/app/view/achat/achat/demande-prix-final/demande-prix-final.component.html
@@ -2,13 +2,13 @@
     <div class="row mb-2">
         <div class="col-md-12">
             <h3 style="display: inline;">Demmande De Prix <b>{{achat.ref}}</b></h3>
-            <button (click)="updateDemmande()" style="float: right;" type="button" class="btn btn-success">Modifie</button>
+            <button (click)="updateDemmande()" style="float: right;" type="button" class="btn btn-success">Save Changes</button>
         </div>
     </div>
     <div class="shadow card text-white bg-dark mb-3">
         <div class="card-body">
-            <button (click)="updateToDevis()" style="float: right;" type="button" class="btn btn-info">Devis
-                Recu</button>
+            <button (click)="updateToDevis()" style="float: right;" type="button" class="btn btn-info">Crée Bon De Commande</button>
+
             <button style="float: left;" type="button" class="btn btn-primary fa fa-file-pdf-o mr-2"></button>
             <button style="float: left;" type="button" class="btn btn-primary fa fa-download mr-2"></button>
             <button style="float: left;" type="button" class="btn btn-primary fa fa-envelope"></button>
