--- a/src/app/view/eb/eb-create/ebp-list-current/ebp-list-current.component.html
+++ b/src/app/view/eb/eb-create/ebp-list-current/ebp-list-current.component.html
@@ -1,8 +1,8 @@
-<div class="shadow card">
+<div class="shadow card bg-dark text-white">
     <div class="card-header">
         Produit
     </div>
-    <div class="card-body table-wrap">
+    <div class="card-body">
         <table class="table table-dark">
             <thead class="thead-inverse">
                 <tr>
