--- a/src/app/view/eb/eb-list/eb-list-stuf/eb-list-stuf.component.html
+++ b/src/app/view/eb/eb-list/eb-list-stuf/eb-list-stuf.component.html
@@ -1,6 +1,6 @@
 <div class="card mb-3">
     <div class="card-body">
-        <h4>List De Tout Les Expression Des Besoin</h4>
+        <h4 style="display: inline;">List De Tout Les Expression Des Besoin</h4>
         <button (click)="onNewEbClick()" style="float: right;" type="button" class="btn btn-success">Crée Une Nouvelle Expression</button>
     </div>
 </div>
