--- a/src/app/view/achat/achat-list/achat-list.component.html
+++ b/src/app/view/achat/achat-list/achat-list.component.html
@@ -16,7 +16,7 @@
                         <select [(ngModel)]=statut class="form-control" id="personnel" (change)="onFilterAction()">
                             <option selected></option>
                             <option *ngFor="let s of statuts" value="{{s}}">
-                               {{s}}
+                                {{s}}
                             </option>
                         </select>
                     </div>
@@ -44,6 +44,7 @@
                     <th>Fournisseur</th>
                     <th>Creation en</th>
                     <th>Livraison en</th>
+                    <th>Total</th>
                 </tr>
             </thead>
             <tbody>
@@ -58,20 +59,70 @@
                     <td>{{achat.fournisseur.nom}}</td>
                     <td>{{achat.dateCommande}}</td>
                     <td>{{achat.dateLivraison}}</td>
+                    <td>{{achat.total}} DH</td>
                     <td>
                         <button (click)="onAchatDelete(achat)" class="btn btn-danger fa fa-trash mr-2"></button>
-                        <button class="btn btn-primary fa fa-eye mr-2" (click)="onAchatShow(achat)"></button>
+                        <button class="btn btn-success fa fa-edit mr-2" (click)="onAchatEdit(achat)"></button>
+                        <button data-toggle="modal" data-target="#items" class="btn btn-primary fa fa-eye mr-2" (click)="onAchatShow(achat)"></button>
                     </td>
             </tbody>
 
         </table>
         <ul class="pagination justify-content-center" style="margin:20px 0">
-            <li class="page-item"><a (click)="setPage(page-1,$event)" class="page-link"><i style="color: rgb(37, 37, 37);" class="fa fa-arrow-left " aria-hidden="true"></i></a></li>
+            <li class="page-item">
+                <a [hidden]="page<=0" (click)="setPage(page-1,$event)" class="page-link">
+                    <i style="color: rgb(37, 37, 37);" class="fa fa-arrow-left " aria-hidden="true"></i></a>
+            </li>
             <li class="page-item" *ngFor="let p of pages; let i=index" [ngClass]="{'active':i==page}">
                 <a (click)="setPage(i,$event)" class="page-link" href="">{{i}}</a>
             </li>
-            <li class="page-item"><a (click)="setPage(page+1,$event)" class="page-link"><i style="color: rgb(37, 37, 37);" class="fa fa-arrow-right " aria-hidden="true"></i></a></li>
-
+            <li class="page-item"><a [hidden]="page<=pages.length" (click)="setPage(page+1,$event)" class="page-link"><i
+                        style="color: rgb(37, 37, 37);" class="fa fa-arrow-right " aria-hidden="true"></i></a></li>
         </ul>
+    </div>
+</div>
+
+<div class="modal fade bd-example-modal-lg" id="items" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Produits</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+
+                <table class="table bg-dark text-white table-border">
+                    <thead class=" thead-inverse ">
+                        <tr>
+                            <th>Produit</th>
+                            <th>Catégorie</th>
+                            <th>Unité</th>
+                            <th>Quantite</th>
+                            <th>Prix Unit (DH)</th>
+                            <th>Sous-Total (DH)</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngIf="achatItems.length==0 ">
+                            <td colspan="4 " role="alert ">
+                                No data to display.
+                            </td>
+                        </tr>
+                        <tr *ngFor="let item of achatItems">
+                            <td>{{item.produit.libelle}}</td>
+                            <td>{{item.produit.cat.libelle}}</td>
+                            <td>{{item.produit.unite.libelle}}</td>
+                            <td>{{item.qteCommander}}</td>
+                            <td>{{item.unitPrice}}</td>
+                            <td>{{item.totalPrice}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="modal-footer">
+            </div>
+        </div>
     </div>
 </div>
