--- a/src/app/view/dashboard/stuf-dash-board/stuf-dash-board.component.html
+++ b/src/app/view/dashboard/stuf-dash-board/stuf-dash-board.component.html
@@ -2,7 +2,7 @@
 <div id="page-content-wrapper">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom mb-3">
         <span>
-            
+            <h2 style="color: white;">Stuf Dashboard</h2>
         </span>
     </nav>
     <div class="container">
