--- a/src/app/view/eb/eb-create/eb-list-current/eb-list-current.component.html
+++ b/src/app/view/eb/eb-create/eb-list-current/eb-list-current.component.html
@@ -1,10 +1,9 @@
 <div class="row">
     <div class="col-md-5">
-        <div class="card shadow">
+        <div class="card shadow bg-dark text-white">
             <div class="card-header">
                 Votre Expression Des Besoin
-                <button style="float: right;" (click)="onShowPersonnelEb()" type="button"
-                    class="btn btn-outline-primary"><i class="fa fa-refresh" aria-hidden="true"></i></button>
+                <button style="float: right;" (click)="onShowPersonnelEb()" type="button" class="btn btn-outline-primary"><i class="fa fa-refresh" aria-hidden="true"></i></button>
             </div>
             <div class="card-body">
                 <table class="table table-dark table-respnsive">
@@ -66,12 +65,12 @@
                     </tbody>
                 </table>
             </div>
-             <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="onEbpUpdate()">Save
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="onEbpUpdate()">Save
                 changes</button>
+            </div>
         </div>
-        </div>
-       
-        
+
+
     </div>
 </div>
