--- a/src/app/view/produit/product-create/product-create.component.html
+++ b/src/app/view/produit/product-create/product-create.component.html
@@ -1,6 +1,5 @@
 <div class="card text-white bg-dark shadow mb-2" style="margin-left: 16%; margin-right: 16%;">
     <div class="card-header">
-        Ajouter Un Produit
     </div>
     <div class="card-body">
         <div class="form-group">
@@ -10,8 +9,7 @@
 
         <div class="form-group">
             <label>Designation:</label>
-            <input type="text" placeholder="entrer la designation du produit" class="form-control"
-                [(ngModel)]=product.libelle>
+            <input type="text" placeholder="entrer la designation du produit" class="form-control" [(ngModel)]=product.libelle>
         </div>
         <div class="form-group">
             <label>Category:</label><button style="float: right;" data-toggle="modal" data-target="#f-cat" class="btn btn-success mb-2">+</button>
@@ -31,12 +29,11 @@
         </div>
     </div>
     <div class="card-footer">
-        <button (click)="saveProduct()" type="submit" class="btn btn-primary ">add Product</button>
+        <button [hidden]="isForUpdate" (click)="saveProduct()" type="submit" class="btn btn-primary ">add Product</button>
     </div>
 </div>
 
-<div class="modal fade bd-example-modal-lg" id="f-cat" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
+<div class="modal fade bd-example-modal-lg" id="f-cat" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -55,8 +52,7 @@
     </div>
 </div>
 
-<div class="modal fade bd-example-modal-lg" id="f-unite" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
+<div class="modal fade bd-example-modal-lg" id="f-unite" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
