--- a/src/app/view/produit/product-list/product-list.component.html
+++ b/src/app/view/produit/product-list/product-list.component.html
@@ -49,33 +49,35 @@
                     <th>Unite</th>
                 </tr>
             </thead>
-            <tbody *ngFor="let p of productsFiltered">
+            <tbody >
                 <tr *ngIf="productsFiltered.length==0">
                     <td class="alert alert-secondary" colspan="6" role="alert">
                         No data to display.
                     </td>
                 </tr>
-                <td>{{p.ref}}</td>
-                <td>{{p.libelle}}</td>
-                <td>{{p.cat.libelle}}</td>
-                <td>{{p.unite.libelle}}</td>
-
-                <td>
-                    <button class="btn btn-danger fa fa-trash mr-2" (click)="onProductDelete(p)"></button>
-                    <button data-toggle="modal" data-target="#p-edit" (click)="getClickedProduct(p)" class="btn btn-primary fa fa-edit"></button>
-                </td>
+                <tr *ngFor="let p of productsFiltered">
+                    <td>{{p.ref}}</td>
+                    <td>{{p.libelle}}</td>
+                    <td>{{p.cat.libelle}}</td>
+                    <td>{{p.unite.libelle}}</td>
+    
+                    <td>
+                        <button class="btn btn-danger fa fa-trash mr-2" (click)="onProductDelete(p)"></button>
+                        <button data-toggle="modal" data-target="#p-edit" (click)="getClickedProduct(p)" class="btn btn-primary fa fa-edit"></button>
+                    </td>
+                </tr>
+                
             </tbody>
         </table>
         <ul class="pagination justify-content-center" style="margin:20px 0">
-            <li class="page-item"><a [hidden]="page<=0" (click)="setPage(page-1,$event)" class="page-link"><i
-                        style="color: rgb(37, 37, 37);" class="fa fa-arrow-left " aria-hidden="true"></i></a></li>
+            <li class="page-item"><a (click)="setPage(page-1,$event)" class="page-link"><i style="color: rgb(37, 37, 37);" class="fa fa-arrow-left " aria-hidden="true"></i></a></li>
             <li class="page-item" *ngFor="let p of pages; let i=index" [ngClass]="{'active':i==page}">
                 <a (click)="setPage(i,$event)" class="page-link" href="">{{i}}</a>
             </li>
-            <li class="page-item"><a [hidden]="page<=pages.length" (click)="setPage(page+1,$event)" class="page-link"><i
-                        style="color: rgb(37, 37, 37);" class="fa fa-arrow-right " aria-hidden="true"></i></a></li>
+            <li class="page-item"><a (click)="setPage(page+1,$event)" class="page-link"><i style="color: rgb(37, 37, 37);" class="fa fa-arrow-right " aria-hidden="true"></i></a></li>
 
         </ul>
+        <button (click)="generatePdf()" class="btn btn-primary mt-2">Open PDF</button>
     </div>
 </div>
 
