--- a/src/app/view/stock/stock-create/stock-create.component.html
+++ b/src/app/view/stock/stock-create/stock-create.component.html
@@ -14,7 +14,9 @@
                         <label for="date-input">Réfernece</label>
                         <input type="text" placeholder="entrer la ref du stock" class="form-control" [(ngModel)]=stock.ref>
                     </div>
+                    <button (click)="generatePdf()" class="btn btn-primary mt-2">Open PDF</button>
                 </div>
+                
             </div>
     <!--Info-->
 
