Ajouter Facture Service Client

--- a/src/app/view/dashboard/comptable-dash-board/comptable-dash-board.component.html
+++ b/src/app/view/dashboard/comptable-dash-board/comptable-dash-board.component.html
@@ -36,16 +36,16 @@
                     <i class="fa fa-plus" aria-hidden="true"></i> Crée Bon De Commande</a>
             </div>
 
-            <!--Paiement-->
+            <!--Facturation-->
 
 
             <a style="color: rgb(14, 13, 13);" class="list-group-item list-group-item-action bg-info collapsed" data-toggle="collapse" href="#collapsepai">
-                Paiement <i style="float: right; bottom: 0;" class="fa fa-angle-down" aria-hidden="true"></i>
+                Facture<i style="float: right; bottom: 0;" class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
 
             <div id="collapsepai" class="collapse bg-dark" data-parent="#accordion">
-                <a style="color: white;" [routerLink]="['paiements']" class="bg-dark list-group-item list-group-item-action">
-                    <i class="fa fa-money" aria-hidden="true"></i> Achat Paiement</a>
+                <a style="color: white;" [routerLink]="['facturation']" class="bg-dark list-group-item list-group-item-action">
+                    <i class="fa fa-money" aria-hidden="true"></i> Facturation</a>
             </div>
 
 
@@ -85,9 +85,9 @@
 
             <div id="collapsestock" class="collapse bg-dark" data-parent="#accordion">
 
-                <a style="color: white;"  class="bg-dark list-group-item list-group-item-action" [routerLink]="['stock']">
+                <a style="color: white;" class="bg-dark list-group-item list-group-item-action" [routerLink]="['stock']">
                     <i class="fa fa-plus-square" aria-hidden="true"></i> Ajouter un Stock</a>
-                <a style="color: white;"  class="bg-dark list-group-item list-group-item-action" [routerLink]="['stocks']">
+                <a style="color: white;" class="bg-dark list-group-item list-group-item-action" [routerLink]="['stocks']">
                     <i class="fa fa-list" aria-hidden="true"></i>List des Stocks</a>
             </div>
 
