Ajouter La Facturation & Paiement

--- a/src/app/view/achat/achat/commande-bon/commande-bon.component.html
+++ b/src/app/view/achat/achat/commande-bon/commande-bon.component.html
@@ -2,7 +2,7 @@
 
     <div class="shadow card text-white bg-dark mb-3">
         <div class="card-body">
-            <h4 style="display: inline;">Crée Une Bon De Commande</h4>
+            <h4 style="display: inline;">Bon De Commande</h4>
             <button style="float: right;" (click)="saveCommande()" type="button" class="btn btn-success">Save</button>
         </div>
     </div>
