--- a/src/app/view/eb/eb-list/eb-list-stuf/eb-list-stuf.component.html
+++ b/src/app/view/eb/eb-list/eb-list-stuf/eb-list-stuf.component.html
@@ -78,7 +78,7 @@
 
 
 </div>
-<div class="modal text-white bg-dark de bd-example-modal-lg" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade bd-example-modal-lg" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -88,7 +88,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <table class="table table-light table-bordered table-hover">
+                <table class="table text-white table-bordered bg-dark">
                     <thead>
                         <tr>
                             <th>Produit</th>
