--- a/src/app/view/achat/achat/demande-prix-items/demande-prix-items.component.html
+++ b/src/app/view/achat/achat/demande-prix-items/demande-prix-items.component.html
@@ -39,8 +39,8 @@
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Ajouter Un Commande Item</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
                 <div class="modal-body">
                     <app-achat-item-form [items]="items"></app-achat-item-form>
@@ -56,10 +56,10 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Ajouter Un Commande Item</h5>
+                    <h5 style="color: black;" class="modal-title" id="exampleModalLabel">Les Besoins Accorder</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
                 <div class="modal-body">
                     <app-achat-item-search [items]="items"></app-achat-item-search>
