--- a/src/app/view/eb/eb-create/ebp-form/ebp-form.component.html
+++ b/src/app/view/eb/eb-create/ebp-form/ebp-form.component.html
@@ -1,6 +1,7 @@
 <div class="card shadow bg-dark text-white">
     <div class="card-header">
         Ajouter Un Produit
+        <button data-toggle="modal" data-target="#modal-produit" type="button" class="btn btn-primary"><i class="fa fa-plus-circle" aria-hidden="true"></i> Add New Product</button>
     </div>
     <div class="card-body">
 
@@ -18,7 +19,7 @@
         <div class="form-group">
             <label for="cat">Produits</label>
             <select class="form-control" id="cat" [(ngModel)]="ebp.produit.libelle">
-                    <option *ngFor="let produit of catProduitsList" value="{{produit.libelle}}">
+                    <option *ngFor="let produit of products" value="{{produit.libelle}}">
                         {{produit.libelle}}
                     </option>
                 </select>
@@ -46,4 +47,23 @@
         <button [disabled]="!ebpValidation(ebp.produit.libelle,ebp.qteDemande)" (click)="onProductAdd()" style="float: right;" type="button" class="btn btn-outline-primary"><i class="fa fa-plus" aria-hidden="true"></i></button>
     </div>
 
+</div>
+
+<div class="modal fade bd-example-modal-lg" id="modal-produit" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Nouvelle Produit</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <app-product-create></app-product-create>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+            </div>
+        </div>
+    </div>
 </div>
