--- a/src/app/view/facture/facture-final/facture-final.component.html
+++ b/src/app/view/facture/facture-final/facture-final.component.html
@@ -1,8 +1,11 @@
 <div class="container-fluid">
     <div class="row mb-2">
         <div class="col-md-12">
-            <h3 style="display: inline;">Facture Fournisseur <b>{{facture.ref}}</b></h3>
-            <button (click)="onFactureSave()" style="float: right;" type="button" class="btn btn-success">Save Changes</button>
+            <h3 style="display: inline;">Facture Fournisseur <b>{{facture.ref}} </b>
+                <span class="badge badge-warning ml-2">{{facture.etat}} </span>
+            </h3>
+            <button (click)="onFactureSave()" style="float: right;" type="button" class="btn btn-success">Save
+                Changes</button>
         </div>
     </div>
     <div class="shadow card text-white bg-dark mb-3">
@@ -10,50 +13,85 @@
             <button style="float: left;" type="button" class="btn btn-primary fa fa-file-pdf-o mr-2"></button>
             <button style="float: left;" type="button" class="btn btn-primary fa fa-download mr-2"></button>
             <button style="float: left;" type="button" class="btn btn-primary fa fa-envelope"></button>
-
-            <span style="float: right;">
-                <span [class]="facture.etat==etats[0]?'active':''">{{etats[0]}} | </span>
-            <span [class]="facture.etat==etats[1]?'active':''">{{etats[1]}}</span>
-            </span>
         </div>
     </div>
     <!--Info-->
-    <div class="row mt-3 mb-2">
+    <div class="row mb-2">
         <div class="col-md-6">
-            <div class="shadow card text-white bg-dark" style="height: 18rem">
-                <div class="card-body">
-                    <h2>Fournisseur:</h2>
-                    <h3>{{achat.fournisseur.nom}}</h3>
-                    <h4><b>Email: </b>{{achat.fournisseur.email}}</h4>
-                    <h4><b>Tel: </b>{{achat.fournisseur.tel}}</h4>
-                    <h4><b>Address: </b>{{achat.fournisseur.adress}}</h4>
+            <div class="row">
+                <div class="col-md-12 mb-2">
+                    <div class="card bg-dark text-white" style="height: 8rem ">
+                        <div class="card-body ">
+                            <div class="form-group">
+                                <label for="d">Date De Facturartion</label>
+                                <input id=d type="date" [(ngModel)]=facture.dateDeFac class="form-control" aria-describedby="helpId">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12 mb-2">
+                    <div class="shadow card text-white bg-dark " style="height: 16rem ">
+                        <div class="card-body ">
+                            <h2 style="color: rgb(207, 155, 255);">Fournisseur:</h2>
+                            <h3>{{achat.fournisseur.nom}}</h3>
+                            <h5><i class="fa fa-telegram mr-2" aria-hidden="true"></i><b>Email: </b>{{achat.fournisseur.email}}</h5>
+                            <h5><i class="fa fa-phone-square mr-2" aria-hidden="true"></i><b>Tel: </b>{{achat.fournisseur.tel}}</h5>
+                            <h5><i class="fa fa-address-card mr-2" aria-hidden="true"></i><b>Address: </b>{{achat.fournisseur.adress}}</h5>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="col-md-6">
-            <div class="shadow card text-white bg-dark" style="height: 18rem">
-                <div class="card-body">
-                    <h2>Achat:</h2>
-                    <h4><b>N°: </b>{{achat.ref}}</h4>
-                    <h4><b>Date Du Commande: </b>{{achat.dateCommande}}</h4>
-                    <h4><b>Date Du Livraison: </b>{{achat.dateLivraison}}</h4>
-                    <h4><b>By: </b>{{achat.comptable.name}}</h4>
+            <div class="row">
+                <div class="col-md-12 mb-2">
+                    <div class="shadow card text-white bg-dark " style="height: 18rem ">
+                        <div class="card-body ">
+                            <h2>Achat:</h2>
+                            <h5><b>N°: </b>{{achat.ref}}</h5>
+                            <h5><b>Date Du Commande: </b>{{achat.dateCommande}}</h5>
+                            <h5><b>Date Du Livraison: </b>{{achat.dateLivraison}}</h5>
+                            <h5><b>By: </b>{{achat.comptable.name}}</h5>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-md-12 mb-2">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="card bg-success text-white" style="height: 6rem ">
+                                <div class="card-body ">
+                                    <h3>Total Paier {{achat.totalPaier}} DH</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="card bg-danger text-white" style="height: 6rem ">
+                                <div class="card-body ">
+                                    <h3>Total Rester {{achat.totalRester}} DH</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
+
+
     <!--Info-->
 
     <!--List-->
-    <div class="row mb-2">
-        <div class="col-md-12">
-            <app-facture-items [items]="items"></app-facture-items>
+    <div class="row mb-2 ">
+        <div class="col-md-12 ">
+            <app-facture-items [items]="items "></app-facture-items>
         </div>
     </div>
 
-    <div class="card bg-dark text-white" style="float: right;">
-        <div class="card-body">
-            <h4 class="card-title">Total: {{achat.total}} DH</h4>
+    <div class="card bg-info text-white mb-3" style="float: right;">
+        <div class="card-body ">
+            <h3>Total: {{achat.total}} DH</h3>
         </div>
     </div>
     <!--List-->
