--- a/src/app/view/achat/achat/commande-bon-items/commande-bon-items.component.html
+++ b/src/app/view/achat/achat/commande-bon-items/commande-bon-items.component.html
@@ -32,7 +32,7 @@
                     <td>{{item.totalPrice}}</td>
 
                     <td>
-                        <button (click)="removeDemmandeItem(item) " type="button " class="btn btn-danger fa fa-trash"></button>
+                        <button (click)="deleteProduct(item) " type="button " class="btn btn-danger fa fa-trash"></button>
                     </td>
                 </tr>
             </tbody>
