--- a/src/app/view/achat/achat/demande-prix-final/demande-prix-final.component.html
+++ b/src/app/view/achat/achat/demande-prix-final/demande-prix-final.component.html
@@ -9,7 +9,7 @@
         <div class="card-body">
             <button (click)="updateToDevis()" style="float: right;" type="button" class="btn btn-info">Crée Bon De Commande</button>
 
-            <button style="float: left;" type="button" class="btn btn-primary fa fa-file-pdf-o mr-2"></button>
+            <button style="float: left;" type="button" class="btn btn-primary fa fa-file-pdf-o mr-2" (click)="generatePdf()"></button>
             <button style="float: left;" type="button" class="btn btn-primary fa fa-download mr-2"></button>
             <button style="float: left;" type="button" class="btn btn-primary fa fa-envelope"></button>
 
