--- a/src/app/view/achat/achat-list/achat-list.component.html
+++ b/src/app/view/achat/achat-list/achat-list.component.html
@@ -69,15 +69,12 @@
 
         </table>
         <ul class="pagination justify-content-center" style="margin:20px 0">
-            <li class="page-item">
-                <a [hidden]="page<=0" (click)="setPage(page-1,$event)" class="page-link">
-                    <i style="color: rgb(37, 37, 37);" class="fa fa-arrow-left " aria-hidden="true"></i></a>
-            </li>
+            <li class="page-item"><a (click)="setPage(page-1,$event)" class="page-link"><i style="color: rgb(37, 37, 37);" class="fa fa-arrow-left " aria-hidden="true"></i></a></li>
             <li class="page-item" *ngFor="let p of pages; let i=index" [ngClass]="{'active':i==page}">
                 <a (click)="setPage(i,$event)" class="page-link" href="">{{i}}</a>
             </li>
-            <li class="page-item"><a [hidden]="page<=pages.length" (click)="setPage(page+1,$event)" class="page-link"><i
-                        style="color: rgb(37, 37, 37);" class="fa fa-arrow-right " aria-hidden="true"></i></a></li>
+            <li class="page-item"><a (click)="setPage(page+1,$event)" class="page-link"><i style="color: rgb(37, 37, 37);" class="fa fa-arrow-right " aria-hidden="true"></i></a></li>
+
         </ul>
     </div>
 </div>
