--- a/src/app/view/dashboard/comptable-dash-board/comptable-dash-board.component.html
+++ b/src/app/view/dashboard/comptable-dash-board/comptable-dash-board.component.html
@@ -99,17 +99,23 @@
 
     <!-- Page Content -->
     <div id="page-content-wrapper">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom mb-3 sticky-top">
-            <button class="btn btn-primary  mr-2" id="menu-toggle"><i class="fa fa-bars"
-                    aria-hidden="true"></i></button>
-            <span>
-                <h2 style="color: white;">Comptable</h2>
-            </span>
-
+        <nav id="navbar-example2" class="navbar navbar-light bg-dark text-white">
+            <button class="btn btn-primary" id="menu-toggle"><i class="fa fa-bars"
+                aria-hidden="true"></i></button>
+            <h2 class="navbar-brand text-white">Comptable DashBoard</h2>
+            <ul class="nav nav-pills">
+                <li class="nav-item">
+                    <h4 class="nav-link">
+                        <i class="fa fa-user-circle-o" aria-hidden="true"></i> {{user_name}}
+                    </h4>
+                </li>
+            </ul>
         </nav>
         <div class="container-fluid">
             <router-outlet></router-outlet>
         </div>
+
+
     </div>
     <!-- /#page-content-wrapper -->
 
