--- a/src/app/view/login-form/login-form.component.html
+++ b/src/app/view/login-form/login-form.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+    <div class="alert alert-danger" [hidden]=!bad_credentials>
+        Bad credentials, Please Try Again
+    </div>
     <div id="login-row" class="row justify-content-center align-items-center">
         <div id="login-column" class="col-md-6">
             <div class="box">
@@ -13,11 +16,11 @@
                     <form class="form" action="">
                         <div class="form-group">
                             <label for="username" class="text-white">Username:</label><br>
-                            <input [(ngModel)]=username type="text" name="username" id="username" class="form-control">
+                            <input [(ngModel)]=request.userName type="text" name="username" id="username" class="form-control">
                         </div>
                         <div class="form-group">
                             <label for="password" class="text-white">Password:</label><br>
-                            <input [(ngModel)]=password type="text" name="password" id="password" class="form-control">
+                            <input [(ngModel)]=request.password type="password" name="password" id="password" class="form-control">
                         </div>
                         <div class="form-group">
                             <button (click)="doLogin()" type="button" class="btn btn-outline-light">Log In</button>
