--- a/src/app/view/dashboard/comptable-dash-board/comptable-dash-board.component.html
+++ b/src/app/view/dashboard/comptable-dash-board/comptable-dash-board.component.html
@@ -99,7 +99,7 @@
 
     <!-- Page Content -->
     <div id="page-content-wrapper">
-        <nav id="navbar-example2" class="navbar navbar-light bg-dark text-white">
+        <nav id="navbar-example2" class="navbar navbar-light bg-dark text-white mb-3">
             <button class="btn btn-primary" id="menu-toggle"><i class="fa fa-bars"
                 aria-hidden="true"></i></button>
             <h2 class="navbar-brand text-white">Comptable DashBoard</h2>
